Update Renovate rules for Kotlin and KSP

--- a/renovate.json
+++ b/renovate.json
@@ -6,9 +6,9 @@
   "prBodyTemplate": "{{{header}}}{{{table}}}{{{warnings}}}{{{notes}}}{{{changelogs}}}{{{controls}}}{{{footer}}}",
   "packageRules": [
     {
-      "matchPackagePatterns": [
-        "org.jetbrains.kotlin.*",
-        "com.google.devtools.ksp"
+      "matchPackageNames": [
+        "org.jetbrains.kotlin:*",
+        "com.google.devtools.ksp:*"
       ],
       "groupName": "Kotlin and KSP",
       "prHeader": "Kotlin and KSP need to be updated together since each KSP version is tied to a Kotlin version. This PR will aggregate their updates. Once checks are passing because compatible versions are in use, this PR can be merged."
