--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,12 @@
       ],
       "groupName": "Kotlin and KSP",
       "prHeader": "Kotlin and KSP need to be updated together since each KSP version is tied to a Kotlin version. This PR will aggregate their updates. Once checks are passing because compatible versions are in use, this PR can be merged."
+    },
+    {
+      "matchUpdateTypes": [
+        "patch"
+      ],
+      "automerge": true
     }
   ]
 }
