Make accelerometer and compass sensors optional

--- a/data/compass/src/main/AndroidManifest.xml
+++ b/data/compass/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
 
     <uses-feature
         android:name="android.hardware.sensor.accelerometer"
-        android:required="true" />
+        android:required="false" />
     <uses-feature
         android:name="android.hardware.sensor.compass"
-        android:required="true" />
+        android:required="false" />
     <uses-feature
         android:name="android.hardware.sensor.gyroscope"
         android:required="false" />
