--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,8 +7,6 @@ androidx-activity = "1.9.2"
 androidx-activity-compose = "1.9.2"
 androidx-appcompat = "1.7.0"
 androidx-compose-bom = "2024.09.03"
-androidx-compose-material3 = "1.3.0"
-androidx-compose-ui = "1.7.3"
 androidx-constraint-layout-compose = "1.0.1"
 androidx-core = "1.13.1"
 androidx-data-store = "1.1.1"
@@ -76,12 +74,12 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidx-compose-bom" }
 androidx-compose-material-icons-core = { group = "androidx.compose.material", name = "material-icons-core" }
 androidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
-androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "androidx-compose-material3" }
-androidx-compose-material3-windowSizeClass = { group = "androidx.compose.material3", name = "material3-window-size-class", version.ref = "androidx-compose-material3" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-compose-material3-windowSizeClass = { group = "androidx.compose.material3", name = "material3-window-size-class" }
 androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-compose-uiTest-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-compose-uiTooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "androidx-compose-ui" }
+androidx-compose-uiTooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-constraintLayout-compose = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "androidx-constraint-layout-compose" }
 androidx-core = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
 androidx-dataStore = { group = "androidx.datastore", name = "datastore", version.ref = "androidx-data-store" }
