Enable parallel Gradle configuration caching

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@
 #Wed Apr 28 13:33:58 CDT 2021
 org.gradle.caching=true
 org.gradle.configuration-cache=true
+org.gradle.configuration-cache.parallel=true
 org.gradle.java.installations.fromEnv=JAVA_HOME
 org.gradle.jvmargs=-Xmx4196M -Dkotlin.daemon.jvm.options\="-Xmx4196M"
 org.gradle.parallel=true
