--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,7 @@ androidx-test-ext-junit = "1.2.1"
 androidx-window = "1.3.0"
 autonomous-dependencyAnalysis = "2.6.0"
 composePlaceholder = "1.0.8"
-dagger = "2.53"
+google-dagger = "2.53.1"
 google-firebase-bom = "33.7.0"
 google-firebase-crashlytics-gradle = "3.0.2"
 google-ksp = "2.1.0-1.0.29"
@@ -32,7 +32,6 @@ google-playServices-testing = "16.1.0"
 google-services = "4.4.2"
 javapoet = { strictly = "1.13.0" }
 javax-inject = "1"
-hilt = "2.53"
 kotest = "5.9.1"
 kotlin = "2.1.0"
 kotlinx-coroutines = "1.9.0"
@@ -52,10 +51,10 @@ worldwind = "1.6.1"
 android-application = { id = "com.android.application", version.ref = "android-tools-gradle" }
 android-library = { id = "com.android.library", version.ref = "android-tools-gradle" }
 autonomous-dependencyAnalysis = { id = "com.autonomousapps.dependency-analysis", version.ref = "autonomous-dependencyAnalysis" }
+google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "google-dagger" }
 google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "google-firebase-crashlytics-gradle" }
 google-ksp = { id = "com.google.devtools.ksp", version.ref = "google-ksp" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -100,15 +99,15 @@ androidx-test-runner = { group = "androidx.test", name = "runner", version.ref =
 androidx-test-ext-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "androidx-test-ext-junit" }
 androidx-window = { group = "androidx.window", name = "window", version.ref = "androidx-window" }
 composePlaceholder-material3 = { group = "com.eygraber", name = "compose-placeholder-material3", version.ref = "composePlaceholder" }
-google-dagger-android = { group = "com.google.dagger", name = "dagger-android", version.ref = "dagger" }
-google-dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger" }
-google-dagger-core = { group = "com.google.dagger", name = "dagger", version.ref = "dagger" }
+google-dagger-android = { group = "com.google.dagger", name = "dagger-android", version.ref = "google-dagger" }
+google-dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "google-dagger" }
+google-dagger-core = { group = "com.google.dagger", name = "dagger", version.ref = "google-dagger" }
 google-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "google-firebase-bom" }
 google-firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx" }
 google-firebase-crashlytics-gradle = { group = "com.google.firebase", name = "firebase-crashlytics-gradle", version.ref = "google-firebase-crashlytics-gradle" }
 google-firebase-crashlytics-ktx = { group = "com.google.firebase", name = "firebase-crashlytics-ktx" }
-google-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
-google-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+google-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "google-dagger" }
+google-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "google-dagger" }
 google-ksp = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "google-ksp" }
 google-materialComponents = { group = "com.google.android.material", name = "material", version.ref = "google-materialComponents" }
 google-playServices-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "google-playServices-location" }
