--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ androidx-constraint-layout-compose = "1.1.1"
 androidx-core = "1.16.0"
 androidx-data-store = "1.1.7"
 androidx-fragment = "1.8.9"
-androidx-hilt = "1.2.0"
+androidx-hilt = "1.3.0"
 androidx-legacySupport-v4 = "1.0.0"
 androidx-lifecycle = "2.9.4"
 androidx-navigation = "2.9.5"
@@ -25,7 +25,7 @@ composePlaceholder = "1.0.12"
 google-dagger = "2.57.2"
 google-firebase-bom = "34.2.0"
 google-firebase-crashlytics-gradle = "3.0.6"
-google-ksp = "2.2.20-2.0.3"
+google-ksp = "2.2.20-2.0.4"
 google-materialComponents = "1.12.0"
 google-playServices-location = "21.3.0"
 google-playServices-testing = "16.1.0"
@@ -105,6 +105,7 @@ google-firebase-analytics = { group = "com.google.firebase", name = "firebase-an
 google-firebase-crashlytics-gradle = { group = "com.google.firebase", name = "firebase-crashlytics-gradle", version.ref = "google-firebase-crashlytics-gradle" }
 google-firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics" }
 google-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "google-dagger" }
+google-hilt-core = { group = "com.google.dagger", name = "hilt-core", version.ref = "google-dagger" }
 google-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "google-dagger" }
 google-ksp = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "google-ksp" }
 google-materialComponents = { group = "com.google.android.material", name = "material", version.ref = "google-materialComponents" }
