--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ google-ksp = "2.2.20-2.0.4"
 google-materialComponents = "1.12.0"
 google-playServices-location = "21.3.0"
 google-playServices-testing = "16.1.0"
+google-protobuf-plugin = "0.9.5"
 google-services = "4.4.4"
 javapoet = { strictly = "1.13.0" }
 javax-inject = "1"
@@ -38,27 +39,27 @@ kotlinx-coroutines = "1.10.2"
 kotlinx-datetime = "0.7.1-0.6.x-compat"
 markwon = "4.6.2"
 protobuf = "4.32.1"
-protobuf-plugin = "0.9.5"
 robolectric = "4.16"
 sunrise-sunset = "1.2"
-testLogger = "4.0.0"
+testLogger-plugin = "4.0.0"
 timber = "5.0.1"
 turbine = "1.2.1"
 worldwind = "1.9.0"
 
 [plugins]
+positional-library-android = { id = "io.trewartha.positional.library.android" }
+positional-library-jvm = { id = "io.trewartha.positional.library.jvm" }
 android-application = { id = "com.android.application", version.ref = "android-tools-gradle" }
 android-library = { id = "com.android.library", version.ref = "android-tools-gradle" }
 autonomous-dependencyAnalysis = { id = "com.autonomousapps.dependency-analysis", version.ref = "autonomous-dependencyAnalysis" }
 google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "google-dagger" }
 google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "google-firebase-crashlytics-gradle" }
 google-ksp = { id = "com.google.devtools.ksp", version.ref = "google-ksp" }
+google-protobuf = { id = "com.google.protobuf", version.ref = "google-protobuf-plugin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
-testLogger = { id = "com.adarshr.test-logger", version.ref = "testLogger" }
 
 [libraries]
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
@@ -96,6 +97,7 @@ androidx-test-core = { group = "androidx.test", name = "core", version.ref = "an
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidx-test-runner" }
 androidx-test-ext-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "androidx-test-ext-junit" }
 androidx-window = { group = "androidx.window", name = "window", version.ref = "androidx-window" }
+autonomous-dependencyAnalysis = { group = "com.autonomousapps", name = "dependency-analysis-gradle-plugin", version.ref = "autonomous-dependencyAnalysis" }
 composePlaceholder-material3 = { group = "com.eygraber", name = "compose-placeholder-material3", version.ref = "composePlaceholder" }
 google-dagger-android = { group = "com.google.dagger", name = "dagger-android", version.ref = "google-dagger" }
 google-dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "google-dagger" }
@@ -128,7 +130,7 @@ protobuf-java-lite = { group = "com.google.protobuf", name = "protobuf-javalite"
 protobuf-kotlin-lite = { group = "com.google.protobuf", name = "protobuf-kotlin-lite", version.ref = "protobuf" }
 robolectric-core = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 sunriseSunset = { group = "com.luckycatlabs", name = "SunriseSunsetCalculator", version.ref = "sunrise-sunset" }
-testLogger = { group = "com.adarshr", name = "gradle-test-logger-plugin", version.ref = "testLogger" }
+testLogger-plugin = { group = "com.adarshr", name = "gradle-test-logger-plugin", version.ref = "testLogger-plugin" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
 worldwind = { group = "earth.worldwind", name = "worldwind", version.ref = "worldwind" }
