build: enable resource shrinking

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,6 @@ org.gradle.java.installations.fromEnv=JAVA_HOME
 org.gradle.jvmargs=-Xmx4196M -Dkotlin.daemon.jvm.options\="-Xmx4196M"
 org.gradle.parallel=true
 android.experimental.enableTestFixturesKotlinSupport=true
+android.r8.optimizedResourceShrinking=true
 android.testoptions.manageddevices.emulator.gpu=swiftshader_indirect
 android.useAndroidX=true
